force-app/main/default/objects/tspa__SessionTypeMapping__c/fields/tspa__ActiveSession__c.field-meta.xml
<CustomField>
    <fullName>tspa__ActiveSession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActiveSessionType</label>
    <type>Checkbox</type>
</CustomField>