force-app/main/default/objects/tspa__SessionTypeMapping__c/fields/tspa__ActiveSessionTypeMobile__c.field-meta.xml
<CustomField>
    <fullName>tspa__ActiveSessionTypeMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActiveSessionTypeMobile</label>
    <type>Checkbox</type>
</CustomField>